--- a/scripts/template/[component].stories.tsx.hbs
+++ b/scripts/template/[component].stories.tsx.hbs
@@ -1,15 +1,15 @@
 import type { Meta, StoryObj } from '@storybook/react'
-import Button from './index'
+import {{componentName}} from './index'
 
 // More on how to set up stories at: https://storybook.js.org/docs/react/writing-stories/introduction
 const meta = {
-  title: '通用/Button',
-  component: Button,
+  title: '通用/{{componentName}}',
+  component: {{componentName}},
   tags: ['autodocs'],
   args: {
     children: 'test',
   },
-} satisfies Meta<typeof Button>
+} satisfies Meta<typeof {{componentName}}>
 
 export default meta
 type Story = StoryObj<typeof meta>
@@ -17,26 +17,10 @@ type Story = StoryObj<typeof meta>
 // More on writing stories with args: https://storybook.js.org/docs/react/writing-stories/args
 export const Primary: Story = {
   args: {
-    btnType: 'primary',
   },
 }
 
 export const Large: Story = {
   args: {
-    size: 'lg',
-  },
-}
-
-export const Small: Story = {
-  render: () => {
-    return (
-      <>
-        <Button btnType='primary'> primary button </Button>
-        <Button btnType='danger'> danger button </Button>
-        <Button btnType='link' href='https://google.com'>
-          link button
-        </Button>
-      </>
-    )
   },
 }
