--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -174,6 +174,8 @@ $box-shadow-inset: inset 0 1px 2px rgba($black, 0.075) !default;
 // 按钮
 // 按钮基本属性
 $btn-font-weight: 400;
+$btn-margin-y: 0.125rem !default;
+$btn-margin-x: 0.25rem !default;
 $btn-padding-y: 0.375rem !default;
 $btn-padding-x: 0.75rem !default;
 $btn-font-family: $font-family-base !default;
@@ -181,10 +183,14 @@ $btn-font-size: $font-size-base !default;
 $btn-line-height: $line-height-base !default;
 
 //不同大小按钮的 padding 和 font size
+$btn-margin-y-sm: 0.1rem !default;
+$btn-margin-x-sm: 0.2rem !default;
 $btn-padding-y-sm: 0.25rem !default;
 $btn-padding-x-sm: 0.5rem !default;
 $btn-font-size-sm: $font-size-sm !default;
 
+$btn-margin-y-lg: 0.2rem !default;
+$btn-margin-x-lg: 0.4rem !default;
 $btn-padding-y-lg: 0.5rem !default;
 $btn-padding-x-lg: 1rem !default;
 $btn-font-size-lg: $font-size-lg !default;
