--- a/scripts/template/[component].stories.tsx.hbs
+++ b/scripts/template/[component].stories.tsx.hbs
@@ -15,8 +15,10 @@ export const Primary: Story = {
   args: {
   },
 }
-
-export const Large: Story = {
-  args: {
-  },
+export const Default: Story = {
+  render: props => (
+      <{{componentName}} {...props}>
+        default {{componentName}}
+      </{{componentName}}>
+  ),
 }
