feat: add Icon component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,9 @@
 
 // animation
 @import 'animation';
-// button
 
-@import '../components/Button/style';
+// button
+@import '../components/button/style';
+
+// icon
+@import '../components/icon/style';
